Fixed navbar alignment issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,10 @@ body {
   padding-bottom: 0.5rem;
   width: 100%;
   position: fixed;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navbar .logo{
@@ -69,10 +73,6 @@ body {
 .ham_image {
   object-fit: cover;
   height: 100%;
-}
-
-.navbar .navlist {
-  float: right;
 }
 
 .navbar .navlist li{
